[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/main/background/Background.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/background/background_up.jpg" type="Texture" id=2]
[ext_resource path="res://assets/scenes/background/background_down.jpg" type="Texture" id=3]
[ext_resource path="res://assets/scenes/background/Shrodinger_eyes.jpg" type="Texture" id=4]
[ext_resource path="res://src/main/background/open_box.tres" type="Animation" id=5]
[ext_resource path="res://assets/sound/OpeningBox.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/ClosingBoxVerb.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=5]
resource_name = "open_box_feint"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background_up:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 12.996, 0.353553 ),
"update": 0,
"values": [ Vector2( 481, 57 ), Vector2( 481, 0 ), Vector2( 481, 57 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_FeintAnimation"
} ]
}

[node name="Background" type="Node2D"]
z_index = -5
script = ExtResource( 1 )

[node name="Shrodinger" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 485, 94 )
scale = Vector2( 0.845, 0.845 )
texture = ExtResource( 4 )

[node name="BlackScreen" type="ColorRect" parent="."]
margin_right = 989.0
margin_bottom = 195.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_up" type="Sprite" parent="."]
position = Vector2( 481, 57 )
scale = Vector2( 0.77, 0.77 )
texture = ExtResource( 2 )

[node name="Background_down" type="Sprite" parent="."]
position = Vector2( 480.5, 427 )
scale = Vector2( 0.77, 0.77 )
texture = ExtResource( 3 )

[node name="Timer_random" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_box_feint = SubResource( 5 )
anims/open_box_shrodinger = ExtResource( 5 )

[node name="Audio" type="Node" parent="."]

[node name="OpeningBox" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )

[node name="ClosingBox" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )

[node name="Timer_GameEnd" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer_random" to="." method="_on_Timer_random_timeout"]
[connection signal="timeout" from="Timer_GameEnd" to="." method="_on_Timer_GameEnd_timeout"]
